# scrum-team

./: .gitignore  Backlog-API-guide.md  CLAUDE.md  README.md  backlog_db.py  branch_deploy.sh  branch_teardown.sh  pyproject.toml  scrimmage-team.md  scrum-team.md  test_backlog_db.py  worktree_setup.py
.github/workflows/: ci.yml  deploy.yml
docs/: OLD scrimmage-team-portability.md  assume-role-verification.md  aws-credentials-setup.md  customization-guide.md  deactivate-static-keys-runbook.md  delete-static-keys-runbook.md  diagrams-howto.md
notes/: dba.md  integration-engineer.md  scrimmage-master.md  technical-writer.md  ui-ux-designer.md
scrimmage/: Backlog-API-guide.md  backlog_db.py  branch_deploy.sh  branch_teardown.sh  scrimmage-team.md  test_backlog_db.py  worktree_setup.py
scrimmage/docs/: assume-role-verification.md  aws-credentials-setup.md  customization-guide.md  deactivate-static-keys-runbook.md  delete-static-keys-runbook.md
scrimmage/notes/: backend-engineer.md  cloud-engineer.md  frontend-engineer.md  known-issues.md  peer-reviewer.md  product-owner.md  scrimmage-master.md  scrimmage-planning-meeting.md  technical-writer.md
scrimmage/tools/: assume-deploy-role.sh  cfn_output.py  check_key_status.sh  generate_sm_state.py  get-aws-creds.sh  memory_monitor.sh  oom_protect.sh  test_assume_role_components.sh
tools/: assume-deploy-role.sh  check_key_status.sh  generate_sm_state.py  get-aws-creds.sh  memory_monitor.sh  oom_protect.sh  test_assume_role_components.sh  test_cfn_output.py
tools/scrimmage-board/: scrimmage_board.py  (+1 more)
(+6 files in other folders)
